# Substream-POC

./: .gitignore  Cargo.toml  build.rs  readme.md  substreams.yaml
consumer/go/main/: main.go
proto/: token-tracker.proto
src/: lib.rs  rpc.rs
src/abis/: mod.rs
src/pb/: token_tracker.rs
