[package]
name = "all-token-tracker-substream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
wasm-bindgen = "0.2.79"
prost = { version = "0.11.0" }
prost-types = "0.11.0"
hex = "0.4.3"
substreams = { version = "0.0.20" }
substreams-ethereum = { version = "0.2.2-rc.2" }
num-bigint = "0.4"
bigdecimal = "0.3"
pad = "0.1"

[build-dependencies]
prost-build = "0.11.0"
anyhow = "1"
substreams-ethereum = { version = "0.2.2-rc.2" }